<resources>
    <string name="app_name">闽生活</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <array name="arr_statement">
        <item>

        </item>
    </array>

    <!--二级学院-->
    <string-array name="array_college">
        <item>计算机信息学院</item>
        <item>光电信息学院</item>
        <item>商学院</item>
        <item>生命科学与化学学院</item>
        <item>艺术设计学院</item>
        <item>人文学院</item>
        <item>土木工程学院</item>
    </string-array>

    <!--性别-->
    <string-array name="array_gender">
        <item>男</item>
        <item>女</item>
    </string-array>

    <!--校区-->
    <string-array name="array_campus">
        <item>康美校区</item>
        <item>美林校区</item>
    </string-array>

    <!--声明-->
    <string name="string_statement">
        \n《闽生活平台服务声明》\n\n

        提醒您：在使用闽生活平台各项服务前，请您务必仔细阅读并透彻理解本声明。
        如对本声明内容有任何疑问，您可向平台客服咨询。阅读本声明的过程中，如果您不同意本声明或其中任何内容，您应立即停止使用平台服务。
        如果您使用平台的服务，即意味着您认可本声明全部内容。\n\n\n


        【权利声明】\n\n

        一、权利归属。\n\n

        除非另有声明，平台内的所有产品、软件、程序、技术、数据及其他信息（包括但不限于文字、图像、照片、图片、视频、音频、图表、版面设计、电子文档）
        的所有权利（包括但不限于版权、商标权、专利权、商业秘密等知识产权及其他所有相关权利）均归或其关联公司所有。未经书面许可，任何人不得擅自使用
        （包括但不限于通过任何机器人、爬虫等程序或设备复制、传播、展示、监视、镜像、上载、下载平台内的任何内容）。
        平台的 Logo、品牌等文字、图形及其组合，以及平台的其他标识、产品和服务名称均为及其关联公司在中国和其它国家的商标，未经书面授权，
        任何人不得以任何方式展示、使用或作其他处理，也不得向他人表明您有权展示、使用或作其他处理。\n\n

        二、知识产权保护，尊重知识产权，反对侵权盗版行为。\n\n

        知识产权权利人认为平台内容（包括但不限于平台会员发布的商品信息）可能涉嫌侵犯其合法权益，可以通过客服提出书面通知，收到后将及时处理。\n\n

        三、责任限制。\n\n

        平台对其自行上传的内容在法律框架内承担责任；平台对用户自行发表的言论、商品信息等，不承担任何责任。平台对部分服务属于电子公告牌（BBS）性质，
        其中信息（包括但不限于公司名称、联系人及联络信息、产品的描述和说明、相关图片、视频等）均由会员自行提供并上传，由会员对其提供并上传的所有信息承担相应法律责任。
        用户平台转载作品（包括论坛内容）出于传递更多信息之目的，并不意味赞同其观点或已经证实其内容的真实性。\n\n\n

        【隐私权政策】\n\n

        照本隐私权政策收集、使用及共享您的个人信息。本隐私权政策包含了我们收集、存储、使用、共享和保护您的个人信息的条款，建议您完整地阅读本隐私权政策，
        以帮助您了解维护自己隐私权的方式。如您对本隐私权政策有任何疑问，您可以通过平台公布的联系方式与我们联系。如果您不同意本隐私权政策任何内容，
        您应立即停止使用平台服务。如您继续使用平台的任一服务，即意味着您已同意我们按照本隐私权政策来合法收集、使用、储存和分享您的相关信息。\n\n

        一、适用范围\n\n

        本隐私权政策适用于平台提供的所有服务，您访问平台网站及/或登陆相关客户端使用平台
        提供的服务，均适用本隐私权政策。需要特别说明的是，本隐私权政策不适用于其他第三方向您提供的服务，例如卖家依托平台向您提供服务时，您向卖家提供的个人信息不适用于本隐私权政策。\n\n

        二、我们如何收集信息\n\n

        我们收集信息是为了向您提供优质、个性化的服务，我们收集信息的方式如下：\n
        1.您向我们提供的信息。\n
        2.当您注册账户及您在使用平台时提供的相关服务时填写及或提交的信息，包括您的姓名、性别、出生年月日、身份证号码、护照姓名、护照号码、电话号码、电子邮箱、地址、邮编、银行账号及相关附加信息。\n
        3.在您使用服务过程中收集的信息。\n
        4.为了提供并优化您需要的服务，我们会收集您使用服务的相关信息，这类信息包括：在您使用平台服务，或访问平台网页时，系统自动接收并记录的您的浏览器和计算机上的信息，
        包括但不限于您的 IP 地址、浏览器信息、访问日期和时间、语言、软硬件特征信息及您浏览的网页记录等数据；如您访问移动网页使用平台服务，或下载或使用或其关联公司客户端软件，
        可能会读取与您位置和移动设备相关的信息，包括但不限于设备型号、操作系统、设备识别码、分辨率、电信运营商等。
        除上述信息外，我们还可能为了提供服务及改进服务质量、服务个性化等合理需要而收集您的其他信息，包括您与我们的客户服务团队联系时您提供的相关信息，
        您参与问卷调查活动时向我们提供的问卷答复信息，以及您与的关联方、合作伙伴之间互动时我们收集的相关信息。与此同时，为提高您使用平台服务时的安全性，预防钓鱼网站欺诈和木马病毒，
        我们可能会通过了解或记录一些您的网络使用习惯、您常用的软件信息等手段来判断您账户的风险，并可能会记录一些我们认为有风险的URL。\n
        5.来自第三方的信息。\n
        为了给您提供更好、更优、更加个性化的服务，或共同为您提供服务，或为了预防互联网欺诈的目的，的关联方、合作伙伴会依据法律的规定或与您的约定或征得您同意的前提下，
        向分享您的个人信息。您了解并同意，以下信息不适用本隐私权政策：\n
        A）您在平台进行交易的有关数据，包括但不限于出价、成交信息及评价等数据；\n
        B）您在使用平台提供的搜索服务时输入的关键字信息；\n
        C）信用评价、违反法律规定或违反规则行为及已对您采取的措施；\n
        D）应法律法规要求需公示的企业名称等相关工商注册信息以及自然人经营者的信息。\n\n

        三、我们如何使用信息\n\n

        收集您的信息是为了向您提供优质、个性化服务的目的，为了实现该目的，我们会把您的信息用于下列用途：\n
        1.向您提供您使用的各项服务，并维护、改进这些服务。\n
        2.向您推荐您可能感兴趣的内容，包括但不限于通过系统向您展示个性化的推广信息，向您发出产品和服务信息，或者在征得您同意的情况下与的合作伙伴共享信息以便他们向您发送有关其产品和服务的信息。如您不希望接收上述信息，可通过相应的退订功能进行退订。\n
        3.我们可能使用您的个人信息以预防、发现、调查欺诈、危害安全、非法或违反与我们或其关联方协议、政策或规则的行为，以保护您、其他我们用户，或我们或其关联方的合法权益。\n
        4.我们可能会将来自某项服务的个人信息与来自其他服务的信息结合起来，用于为了给您提供更加个性化的服务使用，例如让您拥有更广泛的社交圈的需要而使用、共享或披露。\n
        5.经您许可的其他用途。\n\n

        四、我们如何共享信息\n\n

        我们对您的信息承担保密义务，不会为满足第三方的营销目的而向其出售或出租您的任何信息，我们会在下列情况下才将您的信息与第三方共享：\n
        1.事先获得您的同意或授权。\n
        2.根据法律法规的规定或行政或司法机构的要求。\n
        3.向关联方分享您的个人信息。\n
        4.向可信赖的合作伙伴提供您的个人信息，让他们根据我们的指示并遵循我们的隐私权政策以及其他任何相应的保密和安全措施来为我们处理这些信息。\n
        5.如您出现违反中国有关法律、法规或者相关协议或相关规则的情况，需要向第三方披露。\n
        6.为维护及其关联方或用户的合法权益。\n\n

        五、Cookie和网络Beacon的使用\n\n

        为使您获得更轻松的访问体验，您访问平台相关网站或使用平台提供的服务时，我们可能会通过Cookie，Flash Cookie，或您的浏览器或关联应用程序提供的其他本地存储（统称“Cookie”），
        以向您提供个性化的用户体验和服务。请您理解，我们的某些服务只能通过使用“Cookie”才可得到实现。如果您的浏览器或浏览器附加服务允许，
        您可以修改对Cookie的接受程度或者拒绝的Cookie，但这一举动可能会影响您安全访问平台相关网站和使用平台提供的服务。
        网页上常会包含一些电子图象（称为"单像素"GIF文件或"网络beacon"），使用网络beacon可以帮助网站计算浏览网页的用户或访问某些cookie，
        我们会通过网络beacon收集您浏览网页活动的信息，例如您访问的页面地址、您先前访问的援引页面的位址、您停留在页面的时间、您的浏览环境以及显示设定等。\n\n

        六、信息存储\n\n

        收集的有关您的信息和资料将保存在及（或）其关联公司的服务器上，这些信息和资料可能传送至您所在国家、地区或收集信息和资料所在地并在该地被访问、存储和展示。\n\n

        七、您的个人信息保护\n\n

        为保障您的信息安全，我们努力采取各种合理的安全措施来保护您的信息，以防信息的泄漏、毁损或者丢失，包括但不限于 SSL、信息加密存储、数据中心的访问控制。
        我们对可能接触到您的信息的员工或外包人员也采取了严格管理，包括但不限于与他们签署保密协议，根据岗位的不同采取不同的权限控制，监控他们的操作情况等措施。
        您的账户均有安全保护功能，请妥善保管您的账户及密码信息。将通过向其它服务器备份、对用户密码进行加密等安全措施确保您的信息不丢失，不被滥用和变造。
        尽管有前述安全措施，但也请您理解，由于技术的限制以及可能存在的各种恶意行为，在互联网上不能保证百分之百的安全。请您妥善保护自己的个人信息。\n\n\n\n


        最终解释权归闽生活平台所有\n\n

    </string>

    <!--关于我们-->
    <string name="string_about_us">
        \n 无论晴空万里还是雨雪霏霏，\n
        愿您能被岁月温柔以待，\n
        时光能缓，故人不散！\n
        闽生活平台祝您阖家幸福、平安喜乐！\n



        \n\n\n\n 闽生活平台\n
        2021年1月
    </string>

    <string name="spxq">商 品 详 情</string>
    <string name="ysnt">陨石拿铁</string>
    <string name="_1">1</string>
    <string name="sst">三食堂</string>
    <string name="rxkf">瑞幸咖啡</string>
    <string name="_28">28</string>
    <string name="xd">下 单</string>
    <string name="yjfk">意 见 反 馈</string>
    <string name="fknr">请输入反馈内容，我们会更好地为您服务！</string>
    <string name="submit">提 交</string>
    <string name="gywm">关 于 我 们</string>
    <string name="forgot_password">忘 记 密 码</string>
    <string name="college">二级学院</string>
    <string name="hint_college">点击选择二级学院</string>
    <string name="number">学 号</string>
    <string name="hint_number">请输入学号，如：122712018002</string>
    <string name="name">姓 名</string>
    <string name="hint_name">请输入您的真实姓名</string>
    <string name="phone">手 机 号</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="dormitory">宿 舍 号</string>
    <string name="hint_dormitory">请输入宿舍号，如：4#401</string>
    <string name="verificationCode">验  证  码</string>
    <string name="hint_verificationCode">请输入验证码</string>
    <string name="show">密码显示</string>
    <string name="hint_show">点击确定，以显示密码</string>
    <string name="confirm">确 定</string>
    <string name="hydl">亲，欢迎登录</string>
    <string name="enter_password">请输入6位数密码</string>
    <string name="remember_password">记住密码</string>
    <string name="automatic">自动登录</string>
    <string name="login">登 录</string>
    <string name="register">立即注册</string>
    <string name="forget">忘记密码</string>
    <string name="modify">修 改 资 料</string>
    <string name="gender">性 别</string>
    <string name="hint_gender">点击选择性别</string>
    <string name="change_password">修改密码</string>
    <string name="hint_change_password">请输入6位数密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="hint_confirm_password">请再次输入6位数密码</string>
    <string name="save">保 存</string>
    <string name="ty">已阅读并同意以下声明：</string>
    <string name="sm">《闽生活平台服务声明》</string>
    <string name="kmxq">康美校区</string>
    <string name="search">搜索商家、商品名称</string>
    <string name="lcgg">绿茶哥哥</string>
    <string name="qm">这个人很懒，什么都没留下。</string>

</resources>